{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 15,
  "lineage": "7cc1263a-f913-b74d-1f99-dd689efe2b7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212130683549:internet-gateway/igw-05d9d866ebed2888d",
            "id": "igw-05d9d866ebed2888d",
            "owner_id": "212130683549",
            "tags": {
              "Name": "tcw_igw"
            },
            "tags_all": {
              "Name": "tcw_igw"
            },
            "vpc_id": "vpc-0ec4cbf9b97c30eb1"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05d9d866ebed2888d",
            "id": "r-rtb-03459052159710a291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03459052159710a29",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.public_route_table",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212130683549:route-table/rtb-08ab96d97512f283b",
            "id": "rtb-08ab96d97512f283b",
            "owner_id": "212130683549",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tcw_database_route_table"
            },
            "tags_all": {
              "Name": "tcw_database_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec4cbf9b97c30eb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212130683549:route-table/rtb-03459052159710a29",
            "id": "rtb-03459052159710a29",
            "owner_id": "212130683549",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tcw_public_route_table"
            },
            "tags_all": {
              "Name": "tcw_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec4cbf9b97c30eb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d28f6a5ee32aa1b0",
            "route_table_id": "rtb-08ab96d97512f283b",
            "subnet_id": "subnet-078b7278753077651"
          },
          "dependencies": [
            "aws_route_table.database_route_table",
            "aws_subnet.database_subnet_1",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0087e712b41df0f54",
            "route_table_id": "rtb-08ab96d97512f283b",
            "subnet_id": "subnet-0a11ce15383518d35"
          },
          "dependencies": [
            "aws_route_table.database_route_table",
            "aws_subnet.database_subnet_2",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f0ce5c4e0f0ed0a",
            "route_table_id": "rtb-03459052159710a29",
            "subnet_id": "subnet-0fd8c02d4719f1553"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0324c74a152220536",
            "route_table_id": "rtb-03459052159710a29",
            "subnet_id": "subnet-0e9bcd5d53e504c00"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212130683549:security-group/sg-086ae2d1dc1e9cbce",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086ae2d1dc1e9cbce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tcw_security_group",
            "name_prefix": "",
            "owner_id": "212130683549",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tcw_security_group"
            },
            "tags_all": {
              "Name": "tcw_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec4cbf9b97c30eb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212130683549:subnet/subnet-078b7278753077651",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078b7278753077651",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212130683549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_database_subnet_az_1a"
            },
            "tags_all": {
              "Name": "tcw_database_subnet_az_1a"
            },
            "vpc_id": "vpc-0ec4cbf9b97c30eb1"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212130683549:subnet/subnet-0a11ce15383518d35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a11ce15383518d35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212130683549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_database_subnet_az_1b"
            },
            "tags_all": {
              "Name": "tcw_database_subnet_az_1b"
            },
            "vpc_id": "vpc-0ec4cbf9b97c30eb1"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212130683549:subnet/subnet-0fd8c02d4719f1553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd8c02d4719f1553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212130683549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_public_subnet_az_1a"
            },
            "tags_all": {
              "Name": "tcw_public_subnet_az_1a"
            },
            "vpc_id": "vpc-0ec4cbf9b97c30eb1"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212130683549:subnet/subnet-0e9bcd5d53e504c00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9bcd5d53e504c00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212130683549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_public_subnet_az_1b"
            },
            "tags_all": {
              "Name": "tcw_public_subnet_az_1b"
            },
            "vpc_id": "vpc-0ec4cbf9b97c30eb1"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212130683549:vpc/vpc-0ec4cbf9b97c30eb1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-081b5f6ffca055e52",
            "default_route_table_id": "rtb-0b68d09a2eb897819",
            "default_security_group_id": "sg-06778c0ec9d163927",
            "dhcp_options_id": "dopt-028dd6c345053a81f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec4cbf9b97c30eb1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b68d09a2eb897819",
            "owner_id": "212130683549",
            "tags": {
              "Name": "tcw_vpc"
            },
            "tags_all": {
              "Name": "tcw_vpc"
            }
          }
        }
      ]
    }
  ]
}